--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "python.jediEnabled": false,
     "python.linting.pylintEnabled": false,
-    "python.pythonPath": "/usr/local/bin/python3"
+    "python.pythonPath": "/Library/Frameworks/Python.framework/Versions/3.7/bin/python3"
 }
