--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,54 @@
-urllib3==1.23
-numpy==1.15.1
+alembic==1.0.7
+argcomplete==1.8.2
+atomicwrites==1.2.1
+attrs==18.2.0
+autopep8==1.4.3
+beautifulsoup4==4.5.3
+bs4==0.0.1
+certifi==2018.10.15
+chardet==2.3.0
+Click==7.0
+docx2txt==0.6
+EbookLib==0.17
+Flask==1.0.2
+Flask-Migrate==2.4.0
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
+html5==0.0.9
+idna==2.7
+itsdangerous==1.1.0
+Jinja2==2.10
 lxml==4.2.5
-pytz==2018.5
-setuptools==40.2.0
+Mako==1.0.7
+MarkupSafe==1.1.0
+more-itertools==4.3.0
+nltk==3.3
+numpy==1.15.4
+pandas==0.23.4
+pdfminer3k==1.3.1
+Pillow==5.3.0
+pluggy==0.8.0
+ply==3.11
+pokemon-terminal==1.2.0
+psutil==5.4.7
+psycopg2==2.7.7
+py==1.7.0
+pycodestyle==2.5.0
+pycosat==0.6.3
 PyPDF2==1.26.0
-beautifulsoup4==4.7.1
+pytest==3.10.0
+python-dateutil==2.7.5
+python-editor==1.0.4
+python-pptx==0.6.5
+pytz==2018.7
+six==1.10.0
+SpeechRecognition==3.6.3
+SQLAlchemy==1.2.18
+textract==1.6.1
+urllib3==1.24.1
+webencodings==0.5.1
+Werkzeug==0.14.1
+WTForms==2.2.1
+xlrd==1.0.0
+XlsxWriter==1.1.2
