--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Flask-Migrate==2.4.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+fuzzywuzzy==0.17.0
 html5==0.0.9
 idna==2.7
 itsdangerous==1.1.0
@@ -40,11 +41,16 @@ PyPDF2==1.26.0
 pytest==3.10.0
 python-dateutil==2.7.5
 python-editor==1.0.4
+python-Levenshtein==0.12.0
 python-pptx==0.6.5
 pytz==2018.7
+scikit-learn==0.20.3
+scipy==1.2.1
 six==1.10.0
+sklearn==0.0
 SpeechRecognition==3.6.3
 SQLAlchemy==1.2.18
+stopwords==0.1.3
 textract==1.6.1
 urllib3==1.24.1
 webencodings==0.5.1
